# Language

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  mlc.sh
Backend/: Makefile
Backend/src/: Assembling.cpp  main.cpp
Common/: Common.cpp  Common.h
Dump/: OutputFile.txt  dump.dot
Frontend/: Makefile
Frontend/include/: Parce.h  Parse.h  Tokenization.h
Frontend/src/: Parce.cpp  Parse.cpp  Tokenization.cpp  main.cpp
Tests/: Assignment.bebra  Assignment.sex  Factorial.chinazes  Factorial.mylang  Factorial.sex  Kvadratka.chill  Test.chill
Tree/: Tree.cpp  Tree.h
asm/: program.asm
backend/include/: Assembling.h  ir-generate.h  ir-parse.h  ir.h  linked-list.h
backend/src/: Assembling.cpp  ir-generate.c  ir-parse.c  ir.c  main.c  main.cpp
doc/: Grammar.bnf  Grammar.txt  GrammarTODO.txt  grammar.bnf
doc/examples/: Assignment.mylang  Factorial.mylang  factorial-recursive.mylang
dump/: OutputFile.txt  dump.dot  serialized.ast
frontend/: CMakeLists.txt
frontend/include/: parse.h  tokenization.h
frontend/src/: main.c  parse.c  tokenization.c
modules/: CMakeLists.txt  ast.c  ast.h  common.c  common.h  token.c  token.h  tree.c  tree.h
modules/include/: ast.h  common.h  token.h
modules/src/: ast.c  common.c  token.c
